2013-09-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Joakim Lubeck:
	bug #40040: Support for ATtiny20 and ATtiny40
	* avrdude.conf.in: Restructure the reduced-core tiny devices
	to use a common entry .reduced_core_tiny; add ATtiny20 and
	ATtiny40

2013-09-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Joakim Lubeck:
	bug #40033: Support for the XMegaE5 family
	* avrdude.conf.in (ATxmega8E5, ATxmega16E5, ATxmega32E5): New
	entries.

2013-09-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* stk500v2.c (stk500v2_set_sck_period): Revamp this to match the
	description/pseudo-code in appnote AVR068.

2013-09-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Stephen Roe:
	patch #7710: usb_libusb: Check VID/PID before opening device
	* usb_libusb.c (usbdev_open): Swap the sequence of verifying the
	VID:PID, and opening the device.

2013-09-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	patch #8176: butterfly.c (AVR109 protocol implementation) clean-up and bug-fixing
	* butterfly.c (butterfly_page_erase): Add dummy function to avoid
	segfault when writing to EEPROM.

2013-09-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #35474 Feature request: print fuse values in safemode output
	* config_gram.y: New configuration token "default_safemode".
	* lexer.l: (Dito.)
	* avrdude.conf.in: (Dito.)
	* config.h: Add variable default_safemode.
	* config.c: (Dito.)
	* main.c: Handle default_safemode, including -u option.
	* avrdude.1: Document all this.
	* doc/avrdude.texi: (Dito.)

2013-09-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by HubertB:
	patch #7657 Add ATmega406 support for avrdude using DRAGON + JTAG
	* avrdude.conf.in (ATmega406): New entry.

2013-09-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Marc de Hoop:
	patch #7606 ATtiny43u support
	* avrdude.conf.in (ATtiny43U): New entry.

2013-09-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	patch #5708 avrdude should make 10 synchronization attempts instead of just one